[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.141176, 0.141176, 0.517647 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 439.0
offset_top = 249.0
offset_right = 585.0
offset_bottom = 351.0
theme_override_constants/separation = 7

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
offset_right = 146.0
offset_bottom = 14.0
text = "Game Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
offset_top = 21.0
offset_right = 146.0
offset_bottom = 21.0

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 28.0
offset_right = 146.0
offset_bottom = 48.0
text = "Resume"

[node name="MainBtn" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 55.0
offset_right = 146.0
offset_bottom = 75.0
text = "Return to Main Menu"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 82.0
offset_right = 146.0
offset_bottom = 102.0
text = "Quit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainBtn" to="." method="_on_MainBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
